<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:id="@+id/poster"
                android:layout_margin="2dp"
                android:contentDescription="@string/poster"
                android:scaleType="centerCrop"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="12sp"
                android:text="@string/addFav"
                android:id="@+id/fav_b"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:layout_margin="8dp"
            android:textSize="18sp"
            android:textStyle="bold" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/plot"
             android:layout_margin="8dp"
             android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:text="@string/release_date_label"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_margin="8dp"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numStars="10"
            android:stepSize=".2"
            android:theme="@style/Base.Widget.AppCompat.RatingBar"
            android:id="@+id/rating"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/vote"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailerHead"
            android:layout_margin="8dp"
            android:text="@string/trailers_label"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/trailer_recyclerView"
            android:layout_weight="1">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews_label"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:id="@+id/review_Head"
            android:layout_weight="1" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/review_recyclerView"
            android:layout_weight="1">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>